refactor(kubernetes): ♻️ 优化Kubernetes Kerberos工具类代码
1. 使用@Slf4j注解替换printStackTrace()进行更规范的错误日志记录
2. 优化URL构建字符串的格式和可读性
3. 使用URI.create()替代直接URL构造提升安全性
4. 移除未使用的import并整理代码结构