@@ -3,25 +3,28 @@ package com.datasophon.kubernetes.util;
 import cn.hutool.core.io.FileUtil;
 import com.datasophon.common.Constants;
 import com.datasophon.common.utils.PropertyUtils;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URI;
 
 import static com.datasophon.kubernetes.util.KubernetesMinaUtils.uploadFile;
 
+@Slf4j
 public class KubernetesKerberosUtils {
 
     public static void downloadKeytabFromMaster(String hostname, String principal, String keytabName) {
         String masterHost = PropertyUtils.getString(Constants.MASTER_HOST).split(",")[0];
         String masterPort = PropertyUtils.getString(Constants.MASTER_WEB_PORT);
-        Integer clusterId = PropertyUtils.getInt("clusterId");
+        int clusterId = PropertyUtils.getInt("clusterId");
 
         // get kerberos keytab
-        String downloadUrl =
-                "http://" +  masterHost+ ":" + masterPort + "/ddh/cluster/kerberos/downloadKeytab?clusterId="
-                        + clusterId + "&principal=" + principal + "&keytabName=" + keytabName + "&hostname=" + hostname;
+        String downloadUrl = "http://" + masterHost + ":" + masterPort
+                + "/ddh/cluster/kerberos/downloadKeytab?clusterId="
+                + clusterId + "&principal=" + principal + "&keytabName=" + keytabName + "&hostname=" + hostname;
 
         String dest = "/etc/security/keytab/";
         try {
@@ -37,7 +40,7 @@ public class KubernetesKerberosUtils {
                 }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            log.error("Error downloading file: {}", e.getMessage(), e);
         }
     }
 
@@ -49,8 +52,9 @@ public class KubernetesKerberosUtils {
         KubernetesMinaUtils.execCmdWithResult(hostname, "chown -R root:hadoop /etc/security/keytab/");
         KubernetesMinaUtils.execCmdWithResult(hostname, "chmod -R 770 /etc/security/keytab/");
     }
+
     private static InputStream downloadFileAsStream(String downloadUrl) throws IOException {
-        URL url = new URL(downloadUrl);
+        URL url = URI.create(downloadUrl).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
 
